# hRadian

./: README.md  hRadian.cabal
Graphics/: Radian.hs
examples/: example-server.hs
examples/Example/: Eg01.hs  Eg02.hs  Eg03.hs  Eg04.hs  Eg05.hs  Eg06.hs  Eg08.hs  Eg09.hs  Eg10.hs  Eg11.hs  Eg12.hs  Eg13.hs  Eg14.hs  Eg15.hs  Eg16.hs  Eg17.hs  Eg18.hs  Eg19.hs  Eg20.hs  Eg21.hs  Eg25.hs  Eg26.hs  Eg27.hs  Eg32.hs  Eg33.hs  Eg34.hs  Eg35.hs  Eg42.hs  Eg43.hs  Eg44.hs  Eg45.hs  Eg46.hs  Eg47.hs  Eg50.hs  Eg51.hs  Eg53.hs  Eg54.hs  Eg57.hs  Eg59.hs  Eg61.hs  (+2 more)
examples/Example/defunct/: Eg07.hs
examples/static/data/: dat1.csv  dat2.csv  fathers.json  iris.csv  rugdat.csv  sim1-short.csv  sim1.csv  tstdata.csv  vic2012aoo.json  vic2012ooa.csv
